# Database-Management-System

./: README.md
a2-1/: Makefile
a2-1/source/: BigQ.cc  DBFile.cc  TwoWayList.cc  googletest.cc  test.h  test.h~
a2-2/: Makefile~  README~
a2-2/source/: BigQ.cc  BigQ.cc.tmp  Comparison.cc  Comparison.h~  DBFile.h  GenericDBFile.h  Heap.cc~  Sorted.cc  Sorted.h  test1.cc
a2-2/test_yyparse/: lexer.l  myparser  y.tab.c  y.tab.h
a3/: Makefile  Makefile~  README
a3/source/: test.cc~
a4-1/: lex.yy.c
a4-1/source/: Makefile  Statistics.cc  Statistics.h  test.cc  test.cc~
a5/: lex.yy.c  lex.yyfunc.c  y.tab.h  yyfunc.tab.c
a5/source/: BigQ.cc  BigQ.h  Comparison.cc  Comparison.h  DBFile.cc  Ddl.cc  Defs.h  File.cc  File.h  Function.cc  Function.h  GenericDBFile.cc  HeapDBFile.h  Interpreter.cc~  Interpreter.h  Lexer.l  Makefile  Parser.y  Pipe.cc  QueryPlan.cc  QueryPlan.cc.bkp  QueryPlan.cc~  QueryPlan.h  QueryPlan.h.bkp  Record.cc  Record.h  RelOp.cc~  RelOp.h  Schema.cc  Schema.h  SortedDBFile.cc  SortedDBFile.h  Statistics.h  Statistics.txt  ans.txt  catalog  lex.yy.c  lex.yyfunc.c  main.cc  main.exe.stackdump  (+8 more)
phase_1/: Makefile  README
phase_1/source/: CMakeLists.txt  DBFileUnittest.cc  DBFileUnittest.h  File.cc  File.h  Makefile  getcnf.sh  main.cc  test.cc
phase_2-1/: README
phase_2-1/source/: BigQ.cc~  BigQ.h  BigQ.h~  DBFile.h
phase_2-2/: README
phase_2-2/source/: BigQ.h  DBFile.cc  File.cc  (+6 more)
phase_3/: README  README~
phase_4-1/: Makefile~  README  README~  yyfunc.tab.h
phase_5/: Makefile  README  queries.execute  queries.plan  y.tab.c
(+26 files in other folders)
